qt/gen_qcolumnview.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QAbstractItemView QAbstractItemView;
typedef struct QColumnView QColumnView;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QColumnView* QColumnView_new(QWidget* parent);
QColumnView* QColumnView_new2();
QMetaObject* QColumnView_metaObject(const QColumnView* self);
void* QColumnView_metacast(QColumnView* self, const char* param1);
int QColumnView_metacall(QColumnView* self, int param1, int param2, void** param3);
struct miqt_string QColumnView_tr(const char* s);
struct miqt_string QColumnView_trUtf8(const char* s);
void QColumnView_updatePreviewWidget(QColumnView* self, QModelIndex* index);
void QColumnView_connect_updatePreviewWidget(QColumnView* self, intptr_t slot);
QModelIndex* QColumnView_indexAt(const QColumnView* self, QPoint* point);
void QColumnView_scrollTo(QColumnView* self, QModelIndex* index, int hint);
QSize* QColumnView_sizeHint(const QColumnView* self);
QRect* QColumnView_visualRect(const QColumnView* self, QModelIndex* index);
void QColumnView_setModel(QColumnView* self, QAbstractItemModel* model);
void QColumnView_setSelectionModel(QColumnView* self, QItemSelectionModel* selectionModel);
void QColumnView_setRootIndex(QColumnView* self, QModelIndex* index);
void QColumnView_selectAll(QColumnView* self);
void QColumnView_setResizeGripsVisible(QColumnView* self, bool visible);
bool QColumnView_resizeGripsVisible(const QColumnView* self);
QWidget* QColumnView_previewWidget(const QColumnView* self);
void QColumnView_setPreviewWidget(QColumnView* self, QWidget* widget);
void QColumnView_setColumnWidths(QColumnView* self, struct miqt_array /* of int */  list);
struct miqt_array /* of int */  QColumnView_columnWidths(const QColumnView* self);
struct miqt_string QColumnView_tr2(const char* s, const char* c);
struct miqt_string QColumnView_tr3(const char* s, const char* c, int n);
struct miqt_string QColumnView_trUtf82(const char* s, const char* c);
struct miqt_string QColumnView_trUtf83(const char* s, const char* c, int n);
bool QColumnView_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QColumnView_virtualbase_metaObject(const void* self);
bool QColumnView_override_virtual_metacast(void* self, intptr_t slot);
void* QColumnView_virtualbase_metacast(void* self, const char* param1);
bool QColumnView_override_virtual_metacall(void* self, intptr_t slot);
int QColumnView_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QColumnView_override_virtual_indexAt(void* self, intptr_t slot);
QModelIndex* QColumnView_virtualbase_indexAt(const void* self, QPoint* point);
bool QColumnView_override_virtual_scrollTo(void* self, intptr_t slot);
void QColumnView_virtualbase_scrollTo(void* self, QModelIndex* index, int hint);
bool QColumnView_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QColumnView_virtualbase_sizeHint(const void* self);
bool QColumnView_override_virtual_visualRect(void* self, intptr_t slot);
QRect* QColumnView_virtualbase_visualRect(const void* self, QModelIndex* index);
bool QColumnView_override_virtual_setModel(void* self, intptr_t slot);
void QColumnView_virtualbase_setModel(void* self, QAbstractItemModel* model);
bool QColumnView_override_virtual_setSelectionModel(void* self, intptr_t slot);
void QColumnView_virtualbase_setSelectionModel(void* self, QItemSelectionModel* selectionModel);
bool QColumnView_override_virtual_setRootIndex(void* self, intptr_t slot);
void QColumnView_virtualbase_setRootIndex(void* self, QModelIndex* index);
bool QColumnView_override_virtual_selectAll(void* self, intptr_t slot);
void QColumnView_virtualbase_selectAll(void* self);
bool QColumnView_override_virtual_isIndexHidden(void* self, intptr_t slot);
bool QColumnView_virtualbase_isIndexHidden(const void* self, QModelIndex* index);
bool QColumnView_override_virtual_moveCursor(void* self, intptr_t slot);
QModelIndex* QColumnView_virtualbase_moveCursor(void* self, int cursorAction, int modifiers);
bool QColumnView_override_virtual_resizeEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QColumnView_override_virtual_setSelection(void* self, intptr_t slot);
void QColumnView_virtualbase_setSelection(void* self, QRect* rect, int command);
bool QColumnView_override_virtual_visualRegionForSelection(void* self, intptr_t slot);
QRegion* QColumnView_virtualbase_visualRegionForSelection(const void* self, QItemSelection* selection);
bool QColumnView_override_virtual_horizontalOffset(void* self, intptr_t slot);
int QColumnView_virtualbase_horizontalOffset(const void* self);
bool QColumnView_override_virtual_verticalOffset(void* self, intptr_t slot);
int QColumnView_virtualbase_verticalOffset(const void* self);
bool QColumnView_override_virtual_rowsInserted(void* self, intptr_t slot);
void QColumnView_virtualbase_rowsInserted(void* self, QModelIndex* parent, int start, int end);
bool QColumnView_override_virtual_currentChanged(void* self, intptr_t slot);
void QColumnView_virtualbase_currentChanged(void* self, QModelIndex* current, QModelIndex* previous);
bool QColumnView_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QColumnView_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QColumnView_override_virtual_createColumn(void* self, intptr_t slot);
QAbstractItemView* QColumnView_virtualbase_createColumn(void* self, QModelIndex* rootIndex);
bool QColumnView_override_virtual_keyboardSearch(void* self, intptr_t slot);
void QColumnView_virtualbase_keyboardSearch(void* self, struct miqt_string search);
bool QColumnView_override_virtual_sizeHintForRow(void* self, intptr_t slot);
int QColumnView_virtualbase_sizeHintForRow(const void* self, int row);
bool QColumnView_override_virtual_sizeHintForColumn(void* self, intptr_t slot);
int QColumnView_virtualbase_sizeHintForColumn(const void* self, int column);
bool QColumnView_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QColumnView_virtualbase_inputMethodQuery(const void* self, int query);
bool QColumnView_override_virtual_reset(void* self, intptr_t slot);
void QColumnView_virtualbase_reset(void* self);
bool QColumnView_override_virtual_doItemsLayout(void* self, intptr_t slot);
void QColumnView_virtualbase_doItemsLayout(void* self);
bool QColumnView_override_virtual_dataChanged(void* self, intptr_t slot);
void QColumnView_virtualbase_dataChanged(void* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
bool QColumnView_override_virtual_rowsAboutToBeRemoved(void* self, intptr_t slot);
void QColumnView_virtualbase_rowsAboutToBeRemoved(void* self, QModelIndex* parent, int start, int end);
bool QColumnView_override_virtual_selectionChanged(void* self, intptr_t slot);
void QColumnView_virtualbase_selectionChanged(void* self, QItemSelection* selected, QItemSelection* deselected);
bool QColumnView_override_virtual_updateEditorData(void* self, intptr_t slot);
void QColumnView_virtualbase_updateEditorData(void* self);
bool QColumnView_override_virtual_updateEditorGeometries(void* self, intptr_t slot);
void QColumnView_virtualbase_updateEditorGeometries(void* self);
void QColumnView_virtualbase_updateGeometries(void* self);